--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
+certifi==2018.4.16
+chardet==3.0.4
 click==6.7
 Flask==1.0.2
+idna==2.6
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
 numpy==1.14.3
 opencv-contrib-python==3.3.0.9
 PyQt5==5.10.1
+requests==2.18.4
 sip==4.19.8
 SQLAlchemy==1.2.7
+urllib3==1.22
 Werkzeug==0.14.1
